--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,264 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+
+:root {
+  --color-primary: #ff9f43;
+  --color-background: #ecf0f3;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  font-family: "Fredoka One", cursive;
+}
+
+html, body {
+  width: 100%;
+  background-color: var(--color-background);
+  margin: 0;
+}
+
+.divider {
+  width: 100%;
+  height: 5px;
+  margin-top: 8px;
+  box-shadow: inset 2px 2px 4px #d1d9e6, inset -2px -2px 4px #f9f9f9;
+}
+
+h1 {
+  width: 100%;
+  margin: 0;
+  padding: 8px 0;
+  color: var(--color-primary);
+  font-size: 2rem;
+  text-align: center;
+  /* border-bottom: 4px solid var(--color-primary); */
+  /* box-shadow: 0px -6px 10px rgba(255, 255, 255, 1), 0px 4px 15px rgba(0, 0, 0, 0.15); */
+}
+
+input {
+  width: calc(100% - 32px);
+  height: 40px;
+  margin: 0 16px;
+  padding: 0 16px;
+
+  color: var(--color-primary);
+  font-size: 1rem;
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
+
+
+  border: none;
+  outline: none;
+
+  background-color: var(--color-background);
+  border-radius: 8px;
+
+  box-shadow: inset 2px 2px 4px #d1d9e6, inset -2px -2px 4px #f9f9f9;
+}
+
+.page-grid h3 {
+  margin: 0;
+  margin-top: 16px;
+  padding: 0 16px;
+  color: #ccc;
+  font-size: 1.75rem;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.page-grid__container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.page-grid-item {
+  position: relative;
+  width: 360px;
+  height: 320px;
+  margin: 16px;
+  margin-bottom: 32px;
+  border-radius: 100px 25px 100px 25px;
+  overflow: hidden;
+  box-shadow: 
+    8px 8px 16px rgba(165, 177, 198, 0.8),
+    -8px -8px 16px rgba(255, 255, 255, 0.8);
+}
+
+.page-grid-item img {
+  width: 100%;
+  height: 100%;
+}
+
+.page-grid-item__container {
+  z-index: 2;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: #f7f7f7;
+  background-color: var(--color-primary);
+}
+
+.page-grid-item__buttons {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 8px;
+  color: #aaa;
+  font-size: 1.25rem;
+}
+
+.page-grid-item p {
+  width: 80%;
+  padding: 0 20px;
+  color: var(--color-primary);
+  color: #f7f7f7;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.circle {
+  width: 100%;
+  height: 325px;
+  display: block;
+  border-radius: 500%;
+  position: relative;
+  -webkit-animation: rotation 2s linear infinite;
+          animation: rotation 2s linear infinite;
+}
+@-webkit-keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+.circle .inner {
+  width: 200px;
+  height: 200px;
+  background: var(--color-primary);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  border-radius: 100%;
+  box-shadow: 0 -130px 0 -75px var(--color-primary);
+  -webkit-animation: switch 8s ease-in-out infinite;
+          animation: switch 8s ease-in-out infinite;
+}
+@-webkit-keyframes switch {
+  0% {
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 -130px 0 -75px var(--color-primary);
+  }
+  25% {
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 -130px 0 -75px var(--color-primary);
+  }
+  50% {
+    top: calc(100% - 55px);
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 -130px 0 75px var(--color-primary);
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0);
+  }
+  75% {
+    top: calc(100% - 55px);
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 -130px 0 75px var(--color-primary);
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0);
+  }
+  100% {
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 -130px 0 -75px var(--color-primary);
+  }
+}
+@keyframes switch {
+  0% {
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 -130px 0 -75px var(--color-primary);
+  }
+  25% {
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 -130px 0 -75px var(--color-primary);
+  }
+  50% {
+    top: calc(100% - 55px);
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 -130px 0 75px var(--color-primary);
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0);
+  }
+  75% {
+    top: calc(100% - 55px);
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 -130px 0 75px var(--color-primary);
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0);
+  }
+  100% {
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 -130px 0 -75px var(--color-primary);
+  }
 }
